--- a/cover/PhD_Cover.tex
+++ b/cover/PhD_Cover.tex
@@ -7,6 +7,7 @@
 % is used for the text.
 % Changing margins works well. Changing the text height has a bad
 % effect on the table of contents.
+% Change for the cover page if wanted 
 %
 {\thispagestyle{empty}
   \addtolength{\oddsidemargin}{1.0cm}\addtolength{\topmargin}{1.0cm}
