--- a/cover/PhD_Submit_Title.tex
+++ b/cover/PhD_Submit_Title.tex
@@ -1,7 +1,7 @@
 %
 % Title page layout for submitted version.
 %\vspace*{2mm} \includegraphics[width=15mm]{../logos/blue_lowe.pdf}
-\title{\includegraphics[width=35mm]{../logos/csm_Siegel_kleiner_f3fa80eafb.png} \thesistitle }
+\title{\includegraphics[width=5cm]{../logos/csm_Siegel_kleiner_f3fa80eafb.png}\\ \thesistitle }
 \subtitle{\vspace*{4ex}
   \begin{otherlanguage}{ngerman}
     \textbf{\Large Dissertation}\\
