--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -24,8 +24,8 @@ Both of these mechanisms have been investigated with various experiments includi
 
 \begin{figure}[t!]
   \centering
-  \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Diffusive-shock-cartoon.png}
-  \caption{Cartoon shock acceleration~\cite{article_Hoshino}}
+  \includegraphics[width=10.5cm]{thesis_figures/CRnNu/Diffusive-shock-cartoon.pdf}
+  \caption{(a)An illustration to depict the diffusive shock acceleration mechanism and the possible trajectory in the plasma like shock front region. Figure inspired from work by M. Scholer}
   \label{fig:Shock_cartoon}
 \end{figure}
 
@@ -36,7 +36,7 @@ There are many proposed ways in which CRs could get accelerated by astrophysical
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Hillas_modified.png}
-  \caption{Hillas plot~\cite{AlvesBatista:2019tlv}}
+  \caption{An updated version of Hillas plot. Different source classes are plotted according to their radial size, $R$ (abscissa), and magnetic field strength, $B$. The solid and dashed lines indicate the lower limits beyond which confinement of protons (red) and iron (blue) nuclei with energy $10^{20}$eV are possible. The solid and dashed lines indicate different shock velocities. Taken from~\cite{AlvesBatista:2019tlv}}
   \label{fig:Hillas_modified}
 \end{figure}
 
@@ -104,7 +104,7 @@ The study of CRs to constrain their properties and the relevant sources requires
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/all_particle_spectrum.png}
-  \caption{Spectrum Zenodo~\cite{evoli_2018_2360277}}
+  \caption{Cosmic flux vs Energy spectrum. The colour indicates the experiment used to record the flux. At lower energies we have much detailed information about the composition. At high energies only the all particle spectrum is shown due to low flux. Also shown is the gamma ray spectrum recorded by FERMI and the neutrino flux measurement by IceCube. Taken from ~\cite{evoli_2018_2360277}}
   \label{fig:CR-spectrum}
 \end{figure}
 \subsubsection*{Cosmic Ray spectrum}
@@ -120,7 +120,7 @@ where $\gamma$ is the spectral index. The spectral index varies between 2.7 to 3
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/CR-spectrum.png}
-  \caption{Spectrum PDG, CRDB~\cite{ParticleDataGroup:2024cfk}}
+  \caption{Spectrum PDG, CRDB~\cite{ParticleDataGroup:2024cfk} (Which figure is better ?)}
   \label{fig:CR-spectrum_scaled}
 \end{figure}
 
@@ -136,12 +136,12 @@ It is likely that the cutoff and the suppression are not just because of one of 
 
 \subsubsection*{Cosmic Ray composition}
 \label{subsubsec:CRcompo}
-The types of particles the cosmic ray flux at Earth is made up of is called the cosmic ray composition. Such measurements with respect to energy offer a very useful insight into their origin. Direct measurement of the primaries is only possible for low energies and one e.g. is the AMS detector at the International Space Station~\cite{PhysRevLett.110.141102}. For higher energies, the mass of the primary is reconstructed by measuring the phenomenon of Extensive Air Shower(EAS) which is described in more detail in Chapter~\ref{chap:EAS}. EASs are created when high-energy CRs interact with the Earth's atmosphere producing a cascade of particles resembling a shower.  Depending on the mass of the primary, the EAS induced in the atmosphere by the said primary has characteristic differences. For the same energy lighter nuclei such as protons will interact and produce an EAS much deeper in the atmosphere compared to heavy nuclei such as iron. There are various ways one could estimate the mass of the primary. The estimator used for this at the Pierre Auger Observatory is <$X_{max}$> which is the average depth at which the EAS development in the atmosphere reaches a maximum. The <$X_{max}$> values are also energy dependent, and it is observed that iron nuclei typically have values $\sim$100 g $cm^{-2}$ lower than proton. The fluctuation in the spread can also be used to gauge the mass. For e.g. fewer fluctuations are expected for iron compared to proton. Other quantities such as the lateral distribution of the shower which is just the number of particles in a shower as a function of distance from the point of first interaction (core) also show differences based on the primaries. For lighter primaries, the distribution is broader i.e. the number of particles decreases more gradually with distance from the core compared to a narrower distribution in the case of heavier primaries. The ratio of electromagnetic to muonic components first used by KASCADE~\cite{SCHATZ1998151} can also be used to differentiate between the primaries, the lighter primaries have a greater electromagnetic component whereas the heavier primaries have a greater muonic component in the initiated EAS.    
+The types of particles the cosmic ray flux at Earth is made up of is called the cosmic ray composition. Such measurements with respect to energy offer a very useful insight into their origin. Direct measurement of the primaries is only possible for low energies and one e.g. is the AMS detector at the International Space Station~\cite{PhysRevLett.110.141102}. For higher energies, the mass of the primary is reconstructed by measuring the phenomenon of Extensive Air Shower(EAS) which is described in more detail in Chapter~\ref{chap:EAS}. EASs are created when high-energy CRs interact with the Earth's atmosphere producing a cascade of particles resembling a shower.  Depending on the mass of the primary, the EAS induced in the atmosphere by the said primary has characteristic differences. For the same energy lighter nuclei such as protons will interact and produce an EAS much deeper in the atmosphere compared to heavy nuclei such as iron. There are various ways one could estimate the mass of the primary. The estimator used for this at the Pierre Auger Observatory is <$\mathrm{X_{max}}$> which is the average depth at which the EAS development in the atmosphere reaches a maximum. The <$\mathrm{X_{max}}$> values are also energy dependent, and it is observed that iron nuclei typically have values $\sim$100 g cm$^{-2}$ lower than proton. The fluctuation in the spread, $\mathrm{\sigma<X_{max}>}$, can also be used to gauge the mass. For e.g. fewer fluctuations are expected for iron compared to proton. Other quantities such as the lateral distribution of the shower which is just the number of particles in a shower as a function of distance from the point of first interaction (core) also show differences based on the primaries. For lighter primaries, the distribution is broader i.e. the number of particles decreases more gradually with distance from the core compared to a narrower distribution in the case of heavier primaries. The ratio of electromagnetic to muonic components first used by KASCADE~\cite{SCHATZ1998151} can also be used to differentiate between the primaries, the lighter primaries have a greater electromagnetic component whereas the heavier primaries have a greater muonic component in the initiated EAS.    
 
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Composition_measurement.png}
-  \caption{Composition comparison~\cite{ParticleDataGroup:2024cfk}}
+  \caption{Measurements of mass composition by different experiments. $\mathrm{<X_{max}>}$ (top) and its fluctuations $\mathrm{\sigma<X_{max}>}$ (bottom). The red and blue lines are obtained from simulations with different hadronic interaction models. Taken from ~\cite{ParticleDataGroup:2024cfk}}
   \label{fig:CR-composition}
 \end{figure}
 
@@ -156,7 +156,7 @@ The future advancements of the AugerPrime~\cite{ANASTASI2022167497} will further
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/apjac7d4ef1_hr.jpg}
-  \caption{Anisotropy, jargon about Li-Ma~\cite{Abreu_2022}}
+  \caption{Localised excess or Li-Ma~\cite{} significance map at energies above 41 EeV and within a top-hat search angle $\Psi = 24^\circ$ in Galactic coordinates. The gray line indicates the super galactic plane. Area outside the field of view of the Observatory is shown in white. The dark red areas indicate the possible source locations of extragalactic UHECRs. Taken from~\cite{Abreu_2022}}
   \label{fig:CR-anisotropy}
 \end{figure}
 
@@ -175,7 +175,7 @@ Photons again offer another window to look into the origin, propagation and sour
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Photon-limits.png}
-  \caption{Photon limits~\cite{PierreAuger:2024ayl}}
+  \caption{Summary of the current upper limts on the integral photon flux determined by Pierre Auger observatory and other experiments~\cite{PierreAuger:2024ayl}}
   \label{fig:Auger-Photon-limits}
 \end{figure}
 
@@ -189,7 +189,7 @@ Neutrino($\nu$)~\cite{10.1063/1.2995181} (neut-neutral, ino-small) is an element
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Neutrino spectra.jpg}
-  \caption{Neutrino Spectra~\cite{SajjadAthar:2021prg}}
+  \caption{Grand Unified neutrino spectra at Earth. Taken from ~\cite{Vitagliano:2019yzm}}
   \label{fig:Neutrino-spectra}
 \end{figure}
 
@@ -230,8 +230,8 @@ Other interactions such as Neutron Decay ($n \longrightarrow p + e^- + \nu_{e} $
 \end{equation}
 \begin{figure}[t!]
   \centering
-  \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Oscillation_sim_ternary.png}
-  \caption{Ternary plot~\cite{}(Ahlers ISAPP 2022 or 1810.00893)}
+  \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Oscillation_sim_ternary.pdf}
+  \caption{A ternary plot to show the neutrino flavor oscillations. Two different flux ratio per flavor are shown. The propogation distance ??. Taken from~\cite{Ahlers:ISAPP2022}}
   \label{fig:Oscillation_ternary}
 \end{figure}
 
@@ -254,7 +254,7 @@ The exact properties of the neutrinos produced are directly dependent on the par
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/apjab05cef9_hr.jpg}
-  \caption{Figure from mixed fit~\cite{Heinze:2019jou}}
+  \caption{Figure from mixed fit(Will change to something simpler))~\cite{Heinze:2019jou}}
   \label{fig:model_nu_auger_mixed}
 \end{figure}
 
@@ -313,7 +313,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
   \begin{figure}[t!]
     \centering
     \includegraphics[width=14.5cm]{thesis_figures/CRnNu/UHE_nu_techniques.png}
-    \caption{Different detection techniques for UHE neutrinos~\cite{Arguelles:2024xkx}}
+    \caption{Different detection techniques for UHE neutrinos. Ice and Water based Cherenkov detectors are sensitive to atmospheric, galactic neutrinos and some extragalactic neutrinos while radio and air shower detectors are sesitive to very high energy neutrinos with other techniques filling the gaps. The spectral indices of the different components are estimations. Taken from~\cite{Arguelles:2024xkx}}
     \label{fig:UHE-nu-techniques}
   \end{figure}
 
@@ -325,7 +325,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Nu_flux_measurement.png}
-  \caption{Neutrino flux measurements~\cite{ParticleDataGroup:2024cfk}}
+  \caption{Measured neutrino flux for atmospheric and astrophysical neutrinos. At high energies for the diffuse flux of cosmogenic neutrinos there are upperlimits from IceCube and the Pierre Auger Observatory. Taken from~\cite{ParticleDataGroup:2024cfk}}
   \label{fig:Nu_flux_measurement}
 \end{figure}
 
@@ -338,7 +338,9 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
   \begin{figure}[t!]
     \centering
     \includegraphics[width=14.5cm]{thesis_figures/CRnNu/science-abg3395-f2.jpg}
-    \caption{NGC1068 excess~\cite{Icecube_2022}}
+    \caption{Left:The sky region around the most significant neutrino excess spot in the Northern Hemisphereand NGC 1068. The plot shows a fine scan of the region around the hottest spot. The hotspot is marked by a yellow cross and the dot marks the position of NGC 1068. Further, 
+    the solid and dashed contours show the 68\% (solid) and 95\% (dashed) confidence regions of
+    the hot spot localization. Right: The distribution of the squared angular distance between NGC 1068 and the reconstructed event direction. Taken from~\cite{Icecube_2022}}
     \label{fig:NGC1068_excess}
   \end{figure}
 
@@ -346,8 +348,8 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 
   \begin{figure}[t!]
     \centering
-    \includegraphics[width=14.5cm]{thesis_figures/CRnNu/science.adc9818-f1.jpg}
-    \caption{Galactic plane with messengers~\cite{Galactic_plane_nu_2023}}
+    \includegraphics[width=14.5cm]{thesis_figures/CRnNu/science-adc9818-f1.jpg}
+    \caption{Galactic plane with different messengers. The observation of neutrinos at the bottom is the final piece added to this picture.Taken from~\cite{Galactic_plane_nu_2023}}
     \label{fig:Galactic_plane_nu_messengers}
   \end{figure}
 
@@ -362,7 +364,7 @@ The charged lepton can produce detectable signals via ionization, Cherenkov radi
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/neutrinolimits_icrc2023_wiki.pdf}
-  \caption{Limits and models~\cite{PierreAuger:2023pjg}}
+  \caption{Current upper limits on the diffuse flux of neutrinos from different experiments. Only the differential limits are shown. Also shown are the expected neutrino fluxes from different theoretical predictions for comparison. Taken from~\cite{PierreAuger:2023pjg}}
   \label{fig:Nu_limits_auger}
 \end{figure}
 
