--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -48,7 +48,15 @@ The exposure calculated this analysis is compared to the one calculated using th
 \section{Systematic uncertainties}
 \label{sec:det_uncert}
 \todo{Determine what to write}
-
+HERWIG PYTHIA difference take from old analysis.
+PDF difference what is this ?
+Hadronic interaction calculate yourself for 72 deg and $10^{19}$eV
+https://scipost.org/SciPostPhysProc.13.028/pdf for CORSIKA vs others.
+GAP2010-027 sytematic uncertainities neutrinos 
+Also consider tau energy Loss maybe already mentioned in 2010 neutrino paper. 
+Offline fluctuations and different reconstruction algorithms quote your own work.
+can also quote An improved limit to the diffuse flux of ultra-high energy neutrinos
+from the Pierre Auger Observatory(doi:10.1103/PhysRevD.91.092008) 
 \section{Data unblinding}
 \label{sec:data_unblinding}
 As mentioned before in section~\ref{} the search data comprises of all events recorded at the Observatory between 2014-2021 which have a SD ID number non-divisible by 5 i.e. 80\% of all SD data recorded between 2014-2021. This search data sample was further split into a 20\% test sample similarly where SD ID numbers divisible by 4 were taken to be a part of the test sample while the rest became the part of the 60\% search sample. This split was done to perform the unblinding in two stages. The first where only the test sample in unblinded to detect any flaws with the analysis and if and when those flaws are fixed, the rest of the data is unblinded. This exercise turned out to be useful as a slight flaw was uncovered during the unblinding process of the 20\% test sample which was corrected. Said flaw which is described in more detail later required the whole reconstruction process along with the training of the Fisher polynomial to be performed again. This also led to the unblinded 20\% test sample to be blinded again since the reconstruction was altered. The splitting procedure was repeated and the total unblinding was performed again in parts. It is important to mention in all of unblinding procedure \textbf{0 neutrino events survive} the analysis selection.
