--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -1200,18 +1200,23 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   primaryclass  = {astro-ph.CO},
   url           = {https://arxiv.org/abs/2402.16243}
 }
-@article{SajjadAthar:2021prg,
-  author        = {Sajjad Athar, Mohammad and others},
-  title         = {{Status and perspectives of neutrino physics}},
-  eprint        = {2111.07586},
+@article{Vitagliano:2019yzm,
+  author        = {Vitagliano, Edoardo and Tamborra, Irene and Raffelt, Georg},
+  title         = {{Grand Unified Neutrino Spectrum at Earth: Sources and Spectral Components}},
+  eprint        = {1910.11878},
   archiveprefix = {arXiv},
-  primaryclass  = {hep-ph},
-  reportnumber  = {FERMILAB-PUB-21-621-ND},
-  doi           = {10.1016/j.ppnp.2022.103947},
-  journal       = {Prog. Part. Nucl. Phys.},
-  volume        = {124},
-  pages         = {103947},
-  year          = {2022}
+  primaryclass  = {astro-ph.HE},
+  reportnumber  = {MPP-2019-205},
+  doi           = {10.1103/RevModPhys.92.045006},
+  journal       = {Rev. Mod. Phys.},
+  volume        = {92},
+  pages         = {45006},
+  year          = {2020}
+}
+@misc{Ahlers:ISAPP2022,
+  author = {Ahlers, Markus},
+  title = {ISAPP lecture on high energy neutrino astronomy},
+  year = {2022}
 }
 @article{10.1143/PTP.28.870,
   author   = {Maki, Ziro and Nakagawa, Masami and Sakata, Shoichi},
@@ -2089,7 +2094,17 @@ pages     = {89},
   adsurl    = {https://ui.adsabs.harvard.edu/abs/1977ICRC....8..353G},
   adsnote   = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
+@misc{thesis:mayotte2021,
+  address      = {{Wuppertal}},
+  author       = {{Mayotte, Sonja}},
+  howpublished = {{electronic; online}},
+  institution  = {{Bergische Universität Wuppertal}},
+  title        = {{Study of the cosmic ray composition sensitivity of AugerPrime: probing the prospects of the upgrade to the Pierre Auger Observatory with a deep learning approach}},
+  type         = {{thesis}},
+  url          = {{https://eu04.alma.exlibrisgroup.com/view/uresolver/49HBZ_WUP/openurl?u.ignore_date_coverage=true&portfolio_pid=53161361770006447&Force_direct=true; https://doi.org/10.25926/99h7-fc44; http://nbn-resolving.de/urn/resolver.pl?urn=urn%3Anbn%3Ade%3Ahbz%3A468-20210812-123827-3; http://elpub.bib.uni-wuppertal.de/edocs/dokumente/fbc/physik/diss2021/mayotte/}},
+  doi          = {{10.25926/99h7-fc44}},
+  year         = {{June 2021}}
+}
 
 @article{annurev:/content/journals/10.1146/annurev.ns.10.120160.000431,
   author    = {Greisen, K},
@@ -3089,7 +3104,21 @@ author =  {Pierre Billoir}
   reportnumber  = {DESY-02-077},
   slaccitation  = {%%CITATION = HEP-EX/0208021;%%}
 }
-
+@article{PierreAuger:2011cpc,
+  author        = {Abreu, P. and others},
+  collaboration = {Pierre Auger},
+  title         = {{A Search for Ultra-High Energy Neutrinos in Highly Inclined Events at the Pierre Auger Observatory}},
+  eprint        = {1202.1493},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.HE},
+  reportnumber  = {FERMILAB-PUB-11-490-AD-AE-CD-PPD},
+  doi           = {10.1103/PhysRevD.84.122005},
+  journal       = {Phys. Rev. D},
+  volume        = {84},
+  pages         = {122005},
+  year          = {2011},
+  note          = {[Erratum: Phys.Rev.D 84, 029902 (2011)]}
+}
 @PhDThesis{Baust:2008,
 	author = "A. Baust et al.",
 	title  = "Design, construction and test of a GEM-detector",
