--- a/thesis_skel/ubonn-thesis.sty
+++ b/thesis_skel/ubonn-thesis.sty
@@ -722,3 +722,12 @@ D-53115 Bonn}
 Universität Bonn\\
 Auf dem Hügel 71\\
 D-53121 Bonn}
+
+\newcommand*{\BUW}{Bergische Universität Wuppertal}
+\newcommand*{\BUWfac}{Fakultät für Mathematik \\ und Naturwissenschaften}
+\newcommand*{\inBUWfac}{im Fakultät für Mathematik und Naturwissenschaften}
+\newcommand{\BUWaddress}{Fakultät für Mathematik\\
+ und Naturwissenschaften\\
+Universität Bonn\\
+Gaußstr. 20\\
+D-42119 Wuppertal}
